# AWS-API-Gateway

./: .gitignore  docker-compose.yml
api_gateway/: Dockerfile  apigee.yaml  kong.yml
rust_server/: Cargo.toml  Dockerfile
rust_server/src/: main.rs
